fix(java): fix deprecated Locale constructor and ImportAutoConfiguration import
- AmountFormatter: replace new Locale("pt","BR") with Locale.of() (deprecated since Java 19)
- BaseRepositoryIT: fix @ImportAutoConfiguration import — moved from
  org.springframework.boot.test.autoconfigure to org.springframework.boot.autoconfigure
  in Spring Boot 3.4

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>